Add local bin folder to PATH
Signed-off-by: Edgar Grimberg <edgar.grimberg@gmail.com>

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip3 install --user west
+          export PATH=$PATH:~/.local/bin
       - name: Get nrf connect
         run: |
           west init -m https://github.com/nrfconnect/sdk-nrf --mr master ncs
