--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -11,11 +11,20 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.7
+      - name: Cache the compiler
+        uses: actions/cache@v2
+        id: cache-compiler
+        with:
+          path: $HOME/gcc-arm-none-eabi-9-2020-q2-update
+          key: ${{ runner.os }}-gcc-9-2020-q2
       - name: Install cross compiler
+        if: steps.cache-compiler.outputs.cache-hit != 'true'
         run: |
           cd $HOME
           curl -O -L https://armkeil.blob.core.windows.net/developer/Files/downloads/gnu-rm/9-2020q2/gcc-arm-none-eabi-9-2020-q2-update-x86_64-linux.tar.bz2
           tar xf ./gcc-arm-none-eabi-9-2020-q2-update-x86_64-linux.tar.bz2
+      - name: Install ninja and setup the env
+        run: |
           echo "ZEPHYR_TOOLCHAIN_VARIANT=gnuarmemb" >> $GITHUB_ENV
           echo "GNUARMEMB_TOOLCHAIN_PATH=$HOME/gcc-arm-none-eabi-9-2020-q2-update" >> $GITHUB_ENV
           echo "$HOME/gcc-arm-none-eabi-9-2020-q2-update/bin" >> $GITHUB_PATH
