--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -54,4 +54,10 @@ jobs:
       - name: Compile with west
         run: |
           west build -b nrf5340dk_nrf5340_cpuapp        
-
+      - name: Publish artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: Zephyr
+          path: |
+              build/zephyr/zephyr.elf
+              build/zephyr/zephyr.hex
